--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,28 +1,5 @@
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "~bootstrap/scss/root";
-@import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/type";
-@import "~bootstrap/scss/grid";
-@import "~bootstrap/scss/navbar";
-@import "~bootstrap/scss/tables";
-@import "~bootstrap/scss/forms";
-@import "~bootstrap/scss/buttons";
-@import "~bootstrap/scss/transitions";
-@import "~bootstrap/scss/dropdown";
-@import "~bootstrap/scss/button-group";
-@import "~bootstrap/scss/input-group";
-@import "~bootstrap/scss/custom-forms";
-@import "~bootstrap/scss/list-group";
-@import "~bootstrap/scss/close";
-@import "~bootstrap/scss/modal";
-@import "~bootstrap/scss/utilities";
-@import "~bootstrap/scss/badge";
-
-// https://github.com/bootstrap-vue/bootstrap-vue/issues/2951#issuecomment-488582211
-@import 'node_modules/bootstrap-vue/src/components/dropdown/dropdown';
-@import 'node_modules/bootstrap-vue/src/components/modal/modal';
+@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap-vue/src/index.scss";
 
 .tag-close {
   @include font-size($close-font-size);
