--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $navbar-height: 56px;
 $main-section-margin-top: 15px;
 $top-offset: calc(#{$navbar-height} + #{$main-section-margin-top});
 
+$base-font-size: 16px;
 $archive-color: #654321;
 
 .archive-badge {
