Task list item styling updates

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $main-section-margin-top: 15px;
 $top-offset: calc(#{$navbar-height} + #{$main-section-margin-top});
 
 $base-font-size: 16px;
+$small-font-size: 14px;
 $archive-color: #654321;
 
 .archive-badge {
