SelectedTask Title & Checkbox updates TaskList updates

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,8 @@ $main-section-margin-top: 15px;
 $top-offset: calc(#{$navbar-height} + #{$main-section-margin-top});
 
 $base-font-size: 16px;
+$large-font-weight: 500;
+$large-font-size: 24px;
 $small-font-size: 14px;
 $archive-color: #654321;
 
