refactor tag styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $base-font-size: 16px;
 $large-font-weight: 500;
 $large-font-size: 24px;
 $small-font-size: 14px;
+$xs-font-size: 12px;
 $archive-color: #654321;
 
 .archive-badge {
