Countdown.vue updates

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,8 +6,14 @@ $small-font-size: 14px;
 $base-font-size: 16px;
 $large-font-size: 20px;
 $xl-font-size: 24px;
+$xxl-font-size: 32px;
+$xxxl-font-size: 48px;
+$xxxxl-font-size: 64px;
 
 $large-font-weight: 500;
+
+$checkbox-size: 20px;
+$checkbox-large-size: 24px;
 
 $archive-color: #654321;
 
