Refactor font sizes and weights across components, add displayCountdownTime mixin

--- a/src/styles/_tags.scss
+++ b/src/styles/_tags.scss
@@ -4,7 +4,7 @@
   > .btn {
     border-radius: 24px;
     color: white;
-    font-size: $xs-font-size !important;
+    font-size: $font-size-xs !important;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.4),
     0 0 13px rgba(0, 0, 0, 0.1),
     0 0 23px rgba(0, 0, 0, 0.1);
