--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,16 +1,16 @@
 $navbar-height: 56px;
 $top-offset: $navbar-height;
 
-$xs-font-size: 12px;
-$small-font-size: 14px;
-$base-font-size: 16px;
-$large-font-size: 20px;
-$xl-font-size: 24px;
-$xxl-font-size: 32px;
-$xxxl-font-size: 48px;
-$xxxxl-font-size: 64px;
+$font-size-xs: 12px;
+$font-size-small: 14px;
+$font-size-base: 16px;
+$font-size-large: 20px;
+$font-size-xl: 24px;
+$font-size-xxl: 32px;
+$font-size-xxxl: 48px;
+$font-size-xxxxl: 64px;
 
-$large-font-weight: 500;
+$font-weight-bold: 500;
 
 $checkbox-size: 20px;
 $checkbox-large-size: 24px;
