Refactor Timer components and styles, update color variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,6 +16,10 @@ $checkbox-size: 20px;
 $checkbox-large-size: 24px;
 
 $archive-color: #654321;
+$dark-primary: #37352F;
+$dark-tertiary: #DEDEDE;
+$white: #FFFFFF;
+$error-red: #D92D20;
 
 .archive-badge {
   background-color: $archive-color;
