Update TimerDial styling with new color and mask gradient

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,6 +18,7 @@ $checkbox-large-size: 24px;
 $archive-color: #654321;
 $dark-primary: #37352F;
 $dark-tertiary: #DEDEDE;
+$dark-quaternary: #F1F1F0;
 $white: #FFFFFF;
 $error-red: #D92D20;
 
