updated modal heights

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,3 +68,9 @@ table {
     border-top: none !important;
   }
 }
+
+// Modal height override
+.modal-content {
+  height: 80vh;
+  max-height: 80vh;
+}
