updated modal titles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $font-size-xxxl: 48px;
 $font-size-xxxxl: 64px;
 
 $font-weight-bold: 500;
+$font-weight-extra-bold: 600;
 
 $checkbox-size: 20px;
 $checkbox-large-size: 24px;
