Refine UI styling and layout across components

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $font-size-xxl: 32px;
 $font-size-xxxl: 48px;
 $font-size-xxxxl: 64px;
 
+$font-weight-normal: 400;
 $font-weight-bold: 500;
 $font-weight-extra-bold: 600;
 
