--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,11 @@ body {
   padding: 8px;
 }
 
+h5 {
+  font-size: $font-size-base;
+  font-weight: $font-weight-extra-bold;
+}
+
 h6 {
   font-size: $font-size-base;
   font-weight: $font-weight-normal;
