--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,6 +36,10 @@ h6 {
   font-weight: $font-weight-normal;
 }
 
+.oval-border {
+  border-radius: 9999px !important;
+}
+
 .navbar-nav li.nav-item:hover,li.nav-item.show {
   background-color: $dark-quaternary;
   border-radius: 8px;
@@ -87,6 +91,6 @@ table {
 
 // Modal height override
 .modal-content {
-  height: 80vh;
-  max-height: 80vh;
+  height: 90vh;
+  max-height: 90vh;
 }
