--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,10 +14,12 @@ $font-weight-normal: 400;
 $font-weight-bold: 500;
 $font-weight-extra-bold: 600;
 
+$checkbox-size-small: 16px;
 $checkbox-size: 20px;
 $checkbox-large-size: 24px;
 
 $dark-primary: #37352F;
+$dark-secondary: #9A9996;
 $dark-tertiary: #DEDEDE;
 $dark-quaternary: #F1F1F0;
 $white: #FFFFFF;
