--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
+  font-size: $font-size-base;
 }
 
 .width-100 {
@@ -122,6 +123,8 @@ table {
 
 .dropdown-menu {
   border-radius: 8px;
+  width: 240px;
+  padding: 4px;
 
   .dropdown-header {
     padding: 8px;
@@ -131,19 +134,23 @@ table {
   .dropdown-item {
     border: 1px solid transparent;
     border-radius: 8px;
-    padding-left: 4px !important;
-    padding-right: 4px !important;
+    padding-left: 16px !important;
+    padding-right: 12px !important;
+    color: $dark-secondary;
   }
 
   .dropdown-item:hover {
-    background-color: $dark-tertiary;
+    background-color: $dark-quaternary;
     border-color: $dark-quaternary;
   }
 
   li.selected {
     a {
       background-color: #007aff26;
-      // border-color: #007aff26;
     }
+  }
+
+  .b-dropdown-form {
+    padding: 4px;
   }
 }
