--- a/src/styles/_tags.scss
+++ b/src/styles/_tags.scss
@@ -4,6 +4,7 @@
   
   > .btn {
     border-radius: 24px;
+    border: 1px solid transparent !important;
     color: white;
     font-size: $font-size-xs !important;
     padding: 0.375rem .75rem;
