Add dropdown menu styles comment  to main.scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,6 +119,7 @@ table {
   max-height: 90vh;
 }
 
+// Dropdown menu styles for all dropdowns in the app 
 .dropdown-menu {
   border-radius: 8px;
   width: 240px;
