New CompleteStatus.vue component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,9 +18,13 @@ $checkbox-size-small: 16px;
 $checkbox-size: 20px;
 $checkbox-large-size: 24px;
 
+// Colors
 $dark-primary: #37352F;
 $dark-secondary: #9A9996;
 $dark-tertiary: #DEDEDE;
 $dark-quaternary: #F1F1F0;
 $white: #FFFFFF;
 $error-red: #D92D20;
+$primary-blue: #1785ff;
+$primary-blue-light: #b0d5ff;
+$checkbox-border: #969696;
