--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -60,11 +60,23 @@ h6 {
   .navbar-brand,
   #time-container {
     color: #37352F !important;
+    opacity: 0.7;
+    transition: opacity 0.2s ease;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 
   #navbarTagsDropdown {
     .nav-link {
       color: #37352F !important;
+      opacity: 0.7;
+      transition: opacity 0.2s ease;
+
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 }
