Adjusting padding on the gear icon dropdown

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -250,3 +250,8 @@ table {
 .submenu.active {
   display: block;
 }
+
+// Timer settings fieldset padding override
+fieldset[data-v-1c1a6e76].form-group:has(#secondReminderMinutes) {
+  margin-bottom: 0 !important;
+}
