--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,9 @@ $font-weight-normal: 400;
 $font-weight-bold: 500;
 $font-weight-extra-bold: 600;
 
+$border-radius-hover: 6px;
+$border-radius-base: 8px;
+
 $checkbox-size-small: 16px;
 $checkbox-size: 20px;
 $checkbox-large-size: 24px;
