clean up sass deprecation errors

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
+@use "variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-vue/src/index.scss";
-@import "variables";
 @import "fonts";
 @import "tags";
 
@@ -8,8 +8,8 @@
 body {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
-  font-size: $font-size-base;
-  color: $dark-primary;
+  font-size: variables.$font-size-base;
+  color: variables.$dark-primary;
 }
 
 .width-100 {
@@ -25,13 +25,13 @@ body {
 }
 
 h5 {
-  font-size: $font-size-base;
-  font-weight: $font-weight-extra-bold;
+  font-size: variables.$font-size-base;
+  font-weight: variables.$font-weight-extra-bold;
 }
 
 h6 {
-  font-size: $font-size-base;
-  font-weight: $font-weight-normal;
+  font-size: variables.$font-size-base;
+  font-weight: variables.$font-weight-normal;
 }
 
 .oval-border {
@@ -39,14 +39,14 @@ h6 {
 }
 
 .navbar {
-  background-color: $white !important;
+  background-color: variables.$white !important;
   padding: 10px 24px !important;
 
   .nav-link,
   .navbar-brand,
   #time-container,
   #navbarTagsDropdown .nav-link {
-    color: $dark-primary !important;
+    color: variables.$dark-primary !important;
     opacity: 0.7;
     transition: opacity 0.2s ease;
 
@@ -57,33 +57,33 @@ h6 {
 }
 
 .navbar-nav li.nav-item:hover,li.nav-item.show {
-  background-color: $dark-quaternary;
-  border-radius: $border-radius-base;
+  background-color: variables.$dark-quaternary;
+  border-radius: variables.$border-radius-base;
 }
 
 // Custom border-radius for all light buttons
 .btn-light {
-  border-radius: $border-radius-base;
+  border-radius: variables.$border-radius-base;
   border-color: transparent;
-  background-color: $white;
+  background-color: variables.$white;
 }
 
 .btn-light:hover:not(:disabled) {
   border-color: transparent;
-  background-color: $dark-quaternary;
+  background-color: variables.$dark-quaternary;
 }
 
 .btn-light.active {
-  background-color: $white !important;
+  background-color: variables.$white !important;
 }
 
 .btn-danger, .text-danger {
-  color: $error-red;
+  color: variables.$error-red;
 }
 
 .btn-danger {
-  background-color: $white;
-  border-color: $error-red;
+  background-color: variables.$white;
+  border-color: variables.$error-red;
 }
 
 //noinspection CssInvalidPropertyValue
@@ -121,7 +121,7 @@ h6 {
 }
 
 table {
-  color: $dark-primary;
+  color: variables.$dark-primary;
   td {
     padding: 8px !important;
   }
@@ -166,31 +166,31 @@ table {
 
 // Dropdown menu styles for all dropdowns in the app 
 .dropdown-menu {
-  border-radius: $border-radius-base;
+  border-radius: variables.$border-radius-base;
   width: 240px;
   padding: 4px;
   margin: 0;
 
   .dropdown-header {
     padding: 8px;
-    color: $dark-primary;
+    color: variables.$dark-primary;
   }
 
   .dropdown-item {
     border: 1px solid transparent;
-    border-radius: $border-radius-hover;
+    border-radius: variables.$border-radius-hover;
     padding-left: 12px !important;
     padding-right: 12px !important;
-    color: $dark-primary;
+    color: variables.$dark-primary;
   }
 
   .dropdown-item[disabled] {
-    color: $dark-secondary;
+    color: variables.$dark-secondary;
   }
 
   .dropdown-item:hover {
-    background-color: $dark-quaternary;
-    border-color: $dark-quaternary;
+    background-color: variables.$dark-quaternary;
+    border-color: variables.$dark-quaternary;
   }
 
   li.selected {
@@ -202,8 +202,8 @@ table {
   .b-dropdown-form {
     padding: 8px;
     label {
-      font-size: $font-size-base;
-      font-weight: $font-weight-normal;
+      font-size: variables.$font-size-base;
+      font-weight: variables.$font-weight-normal;
     }
   }
 }
@@ -243,7 +243,7 @@ table {
 }
 
 .submenu {
-  border-radius: $border-radius-base;
+  border-radius: variables.$border-radius-base;
   position: absolute !important;
   top: 0;
   left: 100%;
