--- a/src/styles/_tags.scss
+++ b/src/styles/_tags.scss
@@ -6,7 +6,7 @@
     border-radius: 24px;
     border: 1px solid transparent !important;
     color: white;
-    font-size: $font-size-xs !important;
+    font-size: variables.$font-size-xs !important;
     padding: 0.375rem .75rem;
   }
   
