--- a/vue3/PomoTrack/src/styles/main.scss
+++ b/vue3/PomoTrack/src/styles/main.scss
@@ -148,7 +148,7 @@ table {
 .close-icon {
   width: 15px;
   height: 15px;
-  background-image: url('/icons/x.svg');
+  background-image: url('/assets/icons/x.svg');
   background-size: contain;
   background-repeat: no-repeat;
 }
