--- a/vue3/PomoTrack/src/styles/main.scss
+++ b/vue3/PomoTrack/src/styles/main.scss
@@ -1,6 +1,6 @@
 @use "variables";
-@import "~bootstrap/scss/bootstrap";
-@import "~bootstrap-vue-next/src/index.scss";
+@import "bootstrap/scss/bootstrap";
+// @import "bootstrap-vue-next/src/index.scss";
 @import "fonts";
 @import "tags";
 
