--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -153,7 +153,7 @@ table {
 .close-icon {
   width: 15px;
   height: 15px;
-  background-image: url('/assets/icons/x.svg');
+  background-image: url('@/assets/icons/x.svg');
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -190,7 +190,7 @@ table {
     color: variables.$dark-primary;
   }
 
-  .dropdown-item[disabled] {
+  .dropdown-item[disabled], .dropdown-item.disabled {
     color: variables.$dark-secondary;
   }
 
