--- a/vue3/PomoTrack/src/styles/_tags.scss
+++ b/vue3/PomoTrack/src/styles/_tags.scss
@@ -1,7 +1,7 @@
+@use "variables";
+
 .tag {
-  // margin-right: 8px;
-  // margin-top: 8px;
-  
+
   > .btn {
     border-radius: 24px;
     border: 1px solid transparent !important;
@@ -9,18 +9,18 @@
     font-size: variables.$font-size-xs !important;
     padding: 0.375rem .75rem;
   }
-  
+
   > .btn:hover {
     color: lightgrey;
   }
-  
+
   .tag-name {
     word-break: break-word;
   }
 }
 
 .tag-close {
-  @include font-size($close-font-size);
-  font-weight: $close-font-weight;
+  font-size: 12px;
+  font-weight: 700;
   line-height: 1;
 }
