--- a/vue3/PomoTrack/src/styles/main.scss
+++ b/vue3/PomoTrack/src/styles/main.scss
@@ -54,6 +54,10 @@ h6 {
       opacity: 1;
     }
   }
+
+  .dropdown-menu {
+    @extend .dropdown-menu-right;
+  }
 }
 
 .navbar-nav li.nav-item:hover,li.nav-item.show {
@@ -223,6 +227,7 @@ table {
   transform: none !important;
   float: left !important; /* Helps with horizontal alignment */
   max-width: 500px !important;
+  overflow: visible !important;
 }
 
 /* Right-aligned dropdown options */
