working tags menu

--- a/vue3/PomoTrack/src/styles/main.scss
+++ b/vue3/PomoTrack/src/styles/main.scss
@@ -1,6 +1,7 @@
 @use "variables";
 @import "bootstrap/scss/bootstrap";
 @import "bootstrap-vue-next/src/styles/styles.scss";
+@import 'vue-color/style.css';
 @import "fonts";
 @import "tags";
 
