Responsive archive menu, Submenus go below and to the left on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -264,6 +264,14 @@ table {
   z-index: 1000;
 }
 
+@media (max-width: 768px) {
+  .submenu {
+    top: 38px !important;
+    right: 0 !important;
+    left: auto !important;
+  }
+}
+
 .submenu.active {
   display: block;
 }
