--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,6 +35,10 @@ h6 {
   font-weight: variables.$font-weight-normal;
 }
 
+.text-bold {
+  font-weight: variables.$font-weight-bold;
+}
+
 .oval-border {
   border-radius: 9999px !important;
 }
